getting started with html addin'
you heard me

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 
 <body>
-
-    <canvas id="background" hidpi="on" resize="true" keepalive="true"></canvas>
     <div id="container">
-        <div id="noise">
-        </div>
+    <div id="me">
+        <h1>Westin Lohne</h1>
+    </div>
+    <canvas id="background" hidpi="on" resize="true" keepalive="true"></canvas>
+<!--         <div id="noise">
+        </div> -->
     </div>
 </body>
 
