making the background an image, slight gradient change

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1>Westin Lohne</h1>
     </div>
     <canvas id="background" hidpi="on" resize="true" keepalive="true"></canvas>
-<!--         <div id="noise">
-        </div> -->
+        <div id="noise">
+        </div>
     </div>
 </body>
 
