added bg stars, more html & css structure

--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=0" />
     <script type="text/javascript" src="paper-full.min.js"></script>
     <script type="text/paperscript" src="animation.js" canvas="background"></script>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
     <div id="container">
-    <div id="me">
-        <h1>Westin Lohne</h1>
-    </div>
+        <div id="content">
+            <div id="title">
+                <h1>Westin Lohne</h1>
+                <p id="tagline">product designer</p>
+            </div>
+            <div id="description">
+                <p>HEY HEY</p>
+            </div>
+        </div>
     <canvas id="background" hidpi="on" resize="true" keepalive="true"></canvas>
         <div id="noise">
         </div>
