--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/paperscript" src="animation.js" canvas="background"></script>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
+    <script src="//use.typekit.net/tlf2pwb.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
 
 </head>
 
@@ -16,15 +18,16 @@
         <div id="content">
             <div id="title">
                 <h1>Westin Lohne</h1>
-                <p id="tagline">product designer</p>
+                <h2>product designer</h2>
             </div>
             <div id="description">
-                <p>HEY HEY</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat velit ut interdum dignissim. Nulla facilisi. Nulla facilisi. Nunc eget neque vitae nunc finibus vulputate. Morbi gravida mauris a augue tempus, in maximus sapien molestie. Suspendisse potenti. Praesent vestibulum turpis id ligula imperdiet venenatis ut ac velit. Sed ultrices lorem vitae felis ultrices posuere ac sit amet eros. Sed vulputate lacus et purus pretium, at faucibus turpis fringilla. Praesent nec dignissim dui</p>
+                <p></p>
             </div>
         </div>
-    <canvas id="background" hidpi="on" resize="true" keepalive="true"></canvas>
         <div id="noise">
         </div>
+                <canvas id="background" hidpi="on" resize="true" keepalive="true"></canvas>
     </div>
 </body>
 
