social media icons finished.

--- a/index.html
+++ b/index.html
@@ -29,34 +29,50 @@
             <div id="links">
                 <ul>
                 <li id="facebook">
-                    <a href="https://twitter.com/">
-                        <img src="/icons/facebook.svg">
+                    <a href="https://www.facebook.com/lohne">
+                        <img src="/icons/f.svg">
                     </a>
                 </li>
 
                 <li id="twitter">
-                    <a href="https://twitter.com/">
-                        <img src="/icons/twitter.svg">
+                    <a href="https://twitter.com/westinlohne">
+                        <img src="/icons/t.svg">
                     </a>
                 <li id="instagram">
-                    <a href="https://twitter.com/">
-                        <img src="/icons/instagram.svg">
+                    <a href="http://instagram.com/westinlohne/">
+                        <img src="/icons/i.svg">
                     </a>
                 </li>
                 <li id="github">
-                    <a href="https://twitter.com/">
-                        <img src="/icons/github.svg">
-                    </a>
-                </li>
-                <li id="lastfm">
-                    <a href="https://twitter.com/">
-                        <img src="/icons/last_fm.svg">
+                    <a href="https://github.com/westinlohne/">
+                        <img src="/icons/g.svg">
                     </a>
                 </li>
                 <li id="email">
-                    <a href="https://twitter.com/">
-                        <img src="/icons/email.svg">
-                    </a>
+                    <script type="text/javascript" language="javascript">
+                    <!--
+                    // Email obfuscator script 2.1 by Tim Williams, University of Arizona
+                    // Random encryption key feature by Andrew Moulden, Site Engineering Ltd
+                    // This code is freeware provided these four comment lines remain intact
+                    // A wizard to generate this code is at http://www.jottings.com/obfuscator/
+                    { coded = "bWGdnk@AKm.Wem"
+                      key = "qn3cYOPThZuGWDgkzAVQHM8LmSw0oCXatl756yK1bEvFxId4Nirf9pURJj2seB"
+                      shift=coded.length
+                      link=""
+                      for (i=0; i<coded.length; i++) {
+                        if (key.indexOf(coded.charAt(i))==-1) {
+                          ltr = coded.charAt(i)
+                          link += (ltr)
+                        }
+                        else {     
+                          ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+                          link += (key.charAt(ltr))
+                        }
+                      }
+                    document.write("<a href='mailto:"+link+"'><img src='/icons/email.svg'></a>")
+                    }
+                    //-->
+                    </script>
                 </li>
                 </ul>
             </div>
