--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
                 <ul>
                 <li id="facebook">
                     <a href="https://www.facebook.com/lohne">
-                        <img src="/icons/f.svg">
+                        <img src="icons/f.svg">
                     </a>
                 </li>
 
                 <li id="twitter">
                     <a href="https://twitter.com/westinlohne">
-                        <img src="/icons/t.svg">
+                        <img src="icons/t.svg">
                     </a>
                 <li id="instagram">
                     <a href="http://instagram.com/westinlohne/">
-                        <img src="/icons/i.svg">
+                        <img src="icons/i.svg">
                     </a>
                 </li>
                 <li id="github">
                     <a href="https://github.com/westinlohne/">
-                        <img src="/icons/g.svg">
+                        <img src="icons/g.svg">
                     </a>
                 </li>
                 <li id="email">
@@ -69,7 +69,7 @@
                           link += (key.charAt(ltr))
                         }
                       }
-                    document.write("<a href='mailto:"+link+"'><img src='/icons/email.svg'></a>")
+                    document.write("<a href='mailto:"+link+"'><img src='icons/email.svg'></a>")
                     }
                     //-->
                     </script>
