--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
             <div id="links">
                 <ul>
                 <li id="facebook">
-                    <a href="https://www.facebook.com/lohne">
+                    <a target='_blank' href="https://www.facebook.com/lohne">
                         <img src="icons/f.svg">
                     </a>
                 </li>
 
                 <li id="twitter">
-                    <a href="https://twitter.com/westinlohne">
+                    <a target='_blank' href="https://twitter.com/westinlohne">
                         <img src="icons/t.svg">
                     </a>
                 <li id="instagram">
-                    <a href="http://instagram.com/westinlohne/">
+                    <a target='_blank' href="http://instagram.com/westinlohne/">
                         <img src="icons/i.svg">
                     </a>
                 </li>
                 <li id="github">
-                    <a href="https://github.com/westinlohne/">
+                    <a target='_blank' href="https://github.com/westinlohne/">
                         <img src="icons/g.svg">
                     </a>
                 </li>
@@ -69,7 +69,7 @@
                           link += (key.charAt(ltr))
                         }
                       }
-                    document.write("<a href='mailto:"+link+"'><img src='icons/email.svg'></a>")
+                    document.write("<a target='_blank' href='mailto:"+link+"'><img src='icons/email.svg'></a>")
                     }
                     //-->
                     </script>
