until i figure out back-up fonts in canvas elements...

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         }
 
-        headerContext.font = "Bold 2em 'Helvetica Neue'";
+        headerContext.font = "Bold 2em 'Helvetica'";
 
         headerContext.fillStyle = "white";
         headerContext.fillRect(0, 0, 230, 50);
