--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li id="github">
-                    <a target='_blank' href="https://github.com/westinlohne/">
+                    <a target='_blank' href="https://github.com/westin/">
                         <img src="icons/g.svg">
                     </a>
                 </li>
