--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="container">
-        <div id="content">
+        <div id="content" style="display:none;">
             <div id="title">
                 <canvas id="westin" height="46px" width="228px"></canvas>
                 <h1>Westin Lohne</h1>
